# rUNIX

./: LICENSE
rcat/: Cargo.toml
rcat/src/: main.rs  tests.rs
rdate/: Cargo.toml
rdate/src/: main.rs  tests.rs
recho/: Cargo.toml
recho/src/: main.rs  tests.rs
rhead/: Cargo.toml
rhead/src/: #main.rs#  main.rs  tests.rs
rping/: Cargo.toml
rping/src/: main.rs  ping.rs  tests.rs
rtail/: Cargo.toml
rtail/src/: main.rs  tests.rs
