[package]
name = "rping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dns-lookup = { version = "1.0" }
fastping-rs = { version = "0.2" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
test-case = "2.2.1"
